--- a/Labs/Lab_5/Makefile
+++ b/Labs/Lab_5/Makefile
@@ -1,2 +1,4 @@
 Lab5: main.cpp QS.h QS.cpp 
-	g++ -std=c++11 -o Lab5 main.cpp QS.cpp
+	g++ -std=c++11 -o Lab5 main.cpp QS.cpp -Wall -Werror
+clean:
+	rm -f Lab5
